@@ -1,0 +1,49 @@
+doctype html
+html
+  head
+    title RatchetRails
+    = stylesheet_link_tag    'application', :media => 'all'
+    = javascript_include_tag 'application'
+    = csrf_meta_tags
+
+    /! Sets initial viewport load and disables zooming
+    meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no"
+
+    /! Makes your prototype chrome-less once bookmarked to your phone's home screen
+    meta name="apple-mobile-web-app-capable" content="yes"
+    meta name="apple-mobile-web-app-status-bar-style" content="black"
+
+    /! Set Apple icons for when prototype is saved to home screen
+    link rel="apple-touch-icon-precomposed" sizes="114x114" href="touch-icons/apple-touch-icon-114x114.png"
+    link rel="apple-touch-icon-precomposed" sizes="72x72"   href="touch-icons/apple-touch-icon-72x72.png"
+    link rel="apple-touch-icon-precomposed" sizes="57x57"   href="touch-icons/apple-touch-icon-57x57.png"
+  body
+
+    /! Make sure all your bars are the first things in your <body>
+    header.bar-title
+      h1.title <%= app_name %>
+
+    /! Wrap all non-bar HTML in the .content div (this is actually what scrolls)
+    .content
+      = yield
+
+      .content-padded
+        p.welcome Thanks for downloading Ratchet. This is an example HTML page that's linked up to compiled Ratchet CSS and JS, has the proper meta tags and the HTML structure. Need some more help before you start filling this with your own content? Check out some Ratchet resorces:
+
+      ul.list.inset
+        li
+          a href="http://maker.github.com/ratchet/"
+            strong Ratchet documentation
+            span.chevron
+        li
+          a href="http://www.github.com/maker/ratchet/"
+            strong Ratchet on Github
+            span.chevron
+        li
+          a href="https://groups.google.com/forum/#!forum/goratchet"
+            strong Ratchet Google group
+            span.chevron
+        li
+          a href="http://www.twitter.com/GoRatchet"
+            strong Ratchet on Twitter
+            span.chevron
