@@ -1,6 +1,6 @@
 module Ratchet
   module Rails
-    VERSION         = "0.0.2"
+    VERSION         = "0.0.3"
     RATCHET_VERSION = "1.0.0"
   end
 end
